[tool.poetry]
name = "chrisjbillington.github.io"
version = "0.0.1"
description = ""
authors = ["chrisjbillington <chrisjbillington@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pandas = "^1.3.2"
uncertainties = "^3.1.6"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
